--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: attendees
-  host: attendees-${random-word}
+  host: attendees-concourse-demo
   memory: 512MB
   instances: 1
   path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
