--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,7 @@ applications:
   host: attendees-concourse-demo
   memory: 512MB
   instances: 1
-  path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
+  path: target/attendee.jar
 #  buildpack: java_buildpack
   services: []
   env:
