--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,8 @@
 ---
 applications:
-- name: attendees
-  host: attendees-concourse-demo
+- name: pcf-ers-demo
   memory: 512MB
   instances: 1
-  path: target/attendee.jar
-#  buildpack: java_buildpack
-  services: []
+  path: target/pcf-ers-demo-0.0.1-SNAPSHOT.jar
   env:
     SPRING_PROFILES_ACTIVE: cloud
