--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,9 @@
 ---
 applications:
-- name: pcf-ers-demo
+- name: attendees
+- host: attendees-concourse-demo
   memory: 512MB
   instances: 1
-  path: target/pcf-ers-demo-0.0.1-SNAPSHOT.jar
+  path: target/attendee.jar
   env:
     SPRING_PROFILES_ACTIVE: cloud
