--- a/ci/tasks/build.yml
+++ b/ci/tasks/build.yml
@@ -2,7 +2,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: stephenreed/jenkins-java8-maven-git
+    #repository: stephenreed/jenkins-java8-maven-git
+    repository: maven
     tag: latest
 
 inputs:
