--- a/ci/tasks/unit-test.yml
+++ b/ci/tasks/unit-test.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: stephenreed/jenkins-java8-maven-git
+    repository: maven
     tag: latest
 
 inputs:
