--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 ---
 applications:
-- name: attendees
+- name: pcf-ers-demo
   host: attendees-concourse-yj
   memory: 1G
   instances: 1
-  path: target/attendee.jar
+  path: target/pcf-ers-demo.jar
   env:
     SPRING_PROFILES_ACTIVE: cloud
